--- a/meditation-app-master/style.css
+++ b/meditation-app-master/style.css
@@ -60,6 +60,7 @@ video {
     border-radius: 5px;
     font-size: 20px;
     transition: all 0.5s ease;
+	outline:none;
 }
 
 .time-select button:hover {
